--- a/analysis/template/home.html
+++ b/analysis/template/home.html
@@ -9,8 +9,9 @@
     <title>Meeting Website</title>
     <script src="https://lib-im.zego.im/rtc/zego-express-engine.min.js"></script>
     <link rel="stylesheet" href="static/stylehome.css">
+
     <style>
-        
+        lsuyash
 
     </style>
 </head>
@@ -32,6 +33,7 @@
             </div>
         </div>
     </nav>
+    
 </header>
 
  <!-- Hero Section -->
