--- a/analysis/template/home.html
+++ b/analysis/template/home.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="static/stylehome.css">
 
     <style>
-        lsuyash
 
     </style>
 </head>
@@ -24,7 +23,7 @@
                 <li><a href="/home">HOME</a></li>
                 <li><a href="/meetoption">MEETING</a></li>
                 <li><a href="/meetlist">LIST</a></li>
-                <li><a href="#login" class="login-btn">Login</a></li>
+                <li><a href="#login.html" class="login-btn">Login</a></li>
             </ul>
             <div class="menu-toggle" id="menu-toggle">
                 <span class="bar"></span>
@@ -45,20 +44,6 @@
         <a href="meeting.html" class="cta-button">Start Free Trial</a>
     </div>
 </div>
-
-
-
-  <div class="middlesection">
-    <div class="section3" style="font-size: 2rem; text-align: center;"><h1>One platform for limitless human connection</h1>
-        <p><button class="button button1">Green</button></p>
-        <p><button class="button button2">Blue</button></p>
-        <p><button class="button button3">Red</button></p>
-        <p><button class="button button4">Gray</button></a>
-    </div>
-    <div class="section4">Images and features</div>
-</div>
-
-
 
 
 
@@ -148,7 +133,14 @@
 
 
 <div class="ss-section">
-    Screenshots or Screenrecording of the sample meetings and interviews
+  
+    <div class="text-content">
+        <h1>Explore new meetings innovations</h1>
+        <p>Streamline communications with AI-powered communications that work together effortlessly on Zoom Workplace. Explore new meetings innovations that help collaboration before, during, and after meetings.</p>
+    </div>
+    <div class="image-content">
+        <img src="Screenshot 2024-09-19 at 11.55.51 PM.png" alt="Explore new meetings innovations">
+    </div>
 </div>
 <div class="reportsection">Report section:Full information about report</div>
 
