--- a/analysis/static/stylehome.css
+++ b/analysis/static/stylehome.css
@@ -724,11 +724,38 @@ padding-top: 20px;
   
   /**Ss-Section**/
   .ss-section {
-    margin-top: 100px;
     height: 700px;
-    width: 100%;
-    border: solid #333;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 50px;
   }
+
+  .text-content {
+    width: 45%;
+}
+
+.text-content h1 {
+    font-size: 3em;
+    margin-bottom: 20px;
+}
+
+.text-content p {
+    font-size: 1.2em;
+    line-height: 1.5;
+}
+
+.image-content {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-content img {
+    max-width: 100%;
+    border-radius: 10px;
+}
   /**Reportsection**/
   .reportsection {
     margin-top: 100px;
