--- a/analysis/template/home.html
+++ b/analysis/template/home.html
@@ -134,15 +134,24 @@
 
 <div class="ss-section">
   
-    <div class="text-content">
-        <h1>Explore new meetings innovations</h1>
-        <p>Streamline communications with AI-powered communications that work together effortlessly on Zoom Workplace. Explore new meetings innovations that help collaboration before, during, and after meetings.</p>
-    </div>
-    <div class="image-content">
-        <img src="Screenshot 2024-09-19 at 11.55.51 PM.png" alt="Explore new meetings innovations">
-    </div>
+  <div class="text-content">
+    <h1>Track Emotions & Confidence in Meetings</h1>
+    <p>Enhance your meeting experience with EMO-TRACK, a platform that tracks and displays the emotional states and confidence levels of participants during meetings. Understand how people feel, assess their engagement, and foster more effective communication by gaining insights into their sentiments in real-time.</p>
 </div>
-<div class="reportsection">Report section:Full information about report</div>
+<div class="image-content">
+    <img src="static/screenshotsection.jpg" alt="Explore new meetings innovations">
+</div>
+</div>
+
+
+<div class="report-section">
+  <img src="static/report.jpg" alt="Report Image" class="report-image">
+  <div class="report-text">
+    <h2>EMO-TRACK Sentiment Analysis Report</h2>
+    <p>This report visualizes the confidence levels of individuals throughout various sentiments. The accompanying graphs and pie charts illustrate how emotions fluctuate, providing insights into overall sentiment trends and patterns.</p>
+</div>
+</div>
+
 
 
 
