--- a/analysis/static/meeting.css
+++ b/analysis/static/meeting.css
@@ -206,7 +206,11 @@ header{
 
  /**FOOTER**/
 
- .footer {
+
+
+  /**FOOTER**/
+
+  .footer {
     background: #333;
     color: #fff;
     padding: 40px 0;
