--- a/analysis/template/list.html
+++ b/analysis/template/list.html
@@ -164,6 +164,49 @@
                         <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">2024-08-29</div>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">1</div>
+                    </td>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">123456</div>
+                    </td>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">JohnDoe</div>
+                    </td>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">2024-08-29</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">1</div>
+                    </td>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">123456</div>
+                    </td>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">JohnDoe</div>
+                    </td>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">2024-08-29</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">1</div>
+                    </td>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">123456</div>
+                    </td>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">JohnDoe</div>
+                    </td>
+                    <td>
+                        <div type="button" data-bs-toggle="modal" data-bs-target="#reportModal">2024-08-29</div>
+                    </td>
+                </tr>
+                
             </tbody>
         </table>
     </div>
@@ -254,14 +297,17 @@
         </div>
     </div>
 </div>
+
+
+
 <footer class="footer">
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h3>MeetingSite</h3>
-                <p>Connecting people, one meeting at a time.</p>
-            </div>
-            <div class="col-md-4">
+        <div class="footer-logo">
+            <h2>MeetingSite</h2>
+            <p>Connecting people, one meeting at a time.</p>
+        </div>
+        <div class="footer-links">
+            <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="#schedule">Schedule</a></li>
@@ -270,9 +316,17 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <div class="col-md-4">
+            <div class="footer-section">
+                <h3>About Us</h3>
+                <ul>
+                    <li><a href="#about">Company</a></li>
+                    <li><a href="#careers">Careers</a></li>
+                    <li><a href="#privacy">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
                 <h3>Follow Us</h3>
-                <ul class="social-media d-flex">
+                <ul class="social-media">
                     <li><a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#" class="social-icon"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a></li>
