--- a/analysis/static/list.css
+++ b/analysis/static/list.css
@@ -202,14 +202,16 @@ header{
 
  /**FOOTER**/
 
- .footer {
+
+  /**FOOTER**/
+
+  .footer {
     background: #333;
     color: #fff;
     padding: 40px 0;
     position: relative;
     bottom: 0;
     width: 100%;
-    margin-top: 100px;
 }
 
 .container {
