--- a/analysis/template/home.html
+++ b/analysis/template/home.html
@@ -41,7 +41,7 @@
     <div class="hero-content">
         <h2>Enhance Your Meetings with Real-Time Sentiment Insights</h2>
         <p style="color: aliceblue;">Boost engagement and productivity with AI-powered sentiment analysis.</p>
-        <a href="meeting.html" class="cta-button">Start Free Trial</a>
+        <a href="/meetoption" class="cta-button">Start Free Trial</a>
     </div>
 </div>
 
